--- a/GeometryWars/source/Game.Desktop.Shared/Game.Desktop.Shared.vcxitems.filters
+++ b/GeometryWars/source/Game.Desktop.Shared/Game.Desktop.Shared.vcxitems.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)ScoreManager.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)SpriteManager.cpp" />
     <ClCompile Include="$(MSBuildThisFileDirectory)BombManager.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)Collectible.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Bullet.h" />
@@ -20,11 +21,53 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)ScoreManager.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)SpriteManager.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)BombManager.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Collectible.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="XML">
       <UniqueIdentifier>{b3de3877-65aa-4bf1-a18b-c937f5261db4}</UniqueIdentifier>
       <Extensions>.xml</Extensions>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds_small.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\angrybirds_small_include.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\bullet.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_arrow.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_diamond.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_pinwheel.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\enemy_square.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\geometrywars_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\input.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\input_v2.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\player1.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\player_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\polygon.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\sample_entity_xml_class.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\sprite.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xmltabletest.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_action_switch_case.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_action_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_beginplay_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_beginplay_test_music.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_canevertick_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_create_entity_from_file_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_create_entity_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_destroy_entity_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_entitylist_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_entity_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_expression_ref_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_function_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_if_else_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_invalid_table.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_invalid_table_state.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_literal_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_multi_entity_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_arguments.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_notnotified.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_reaction_test_subtype.xml" />
+    <Xml Include="$(MSBuildThisFileDirectory)..\..\Content\config\xml_while_test.xml" />
   </ItemGroup>
 </Project>
